--- a/index.html
+++ b/index.html
@@ -20,7 +20,8 @@
       <nav class="gnav">
         <ul class="gnav__menu">
             <li class="gnav__menu__item"><a href="#About">About</a></li>
-            <li class="gnav__menu__item"><a href="#Items">Items</a></li>
+            <li class="gnav__menu__item"><a href="#Items">Activity</a></li>
+            <li class="gnav__menu__item"><a href="#Items">Goods</a></li>
             <li class="gnav__menu__item"><a href="#Event">Event</a></li>
             <li class="gnav__menu__item"><a href="#Contact">Contact</a></li>
         </ul>
@@ -40,7 +41,8 @@
       <ul class="footer-menu">
         <li>Home ｜</li>
         <li>About ｜</li>
-        <li>Items ｜</li>
+        <li>Activity ｜</li>
+        <li>Goods ｜</li>
         <li>Event ｜</li>
         <li>Contact</li>
       </ul>
@@ -49,7 +51,7 @@
         <a href="https://twitter.com/moeni____13"><i class="fab fa-twitter-square fa-2x my-skyblue"></i></a>
         <a href=""><i class="fab fa-facebook-square fa-2x my-blue"></i></a>
       </div>
-      <p>© All rights reserved by Hands up.</p>
+      <p>© All rights reserved by Hands up. 2021</p>
   </footer>
 
 </body>
