--- a/index.html
+++ b/index.html
@@ -7,15 +7,18 @@
   <link rel="stylesheet" type="text/css" href="css/reset.css">
   <link rel="stylesheet" type="text/css" href="css/style.css">
   <script src="https://kit.fontawesome.com/12f954cd39.js" crossorigin="anonymous"></script>
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link href="https://fonts.googleapis.com/css2?family=Chakra+Petch:ital,wght@1,700&family=Noto+Sans+TC:wght@700&family=Open+Sans&family=Roboto&family=Rock+Salt&display=swap" rel="stylesheet">
 
-
-  <title>Hands Up</title>
+  <title>HANDS UP</title>
 </head>
 
 <body>
   <!-- header ここから -->
   <header>
-    <div class="header-logo">Hands Up</div>
+    <div class="header-logo">HANDS UP</div>
     <div class="header-list">
       <nav class="gnav">
         <ul class="gnav__menu">
@@ -31,7 +34,43 @@
 
   <!-- main ここから -->
   <main>
-    メイン
+    <div class="top-image">
+      <img src="img/susuki(2).jpeg" alt="top-image">
+      <div class="top-text">
+        <h1>HANDS UP</h1>
+        <p>~choose happiness~</p>
+      </div>
+    </div>
+
+    <!-- about　ここから -->
+    <section class="about">
+      <h2>About</h2>
+      
+    </section>
+
+    <!-- activity　ここから -->
+
+    <section class="activity">
+      <h2>Activity</h2>
+      
+
+    </section>
+
+    <!-- goods　ここから -->
+
+    <section class="goods">
+      <h2>Goods</h2>
+
+
+    </section>
+
+    <!-- event　ここから -->
+
+    <section class="event">
+      <h2>Event</h2>
+
+
+    </section>
 
   </main>
 
@@ -51,7 +90,7 @@
         <a href="https://twitter.com/moeni____13"><i class="fab fa-twitter-square fa-2x my-skyblue"></i></a>
         <a href=""><i class="fab fa-facebook-square fa-2x my-blue"></i></a>
       </div>
-      <p>© All rights reserved by Hands up. 2021</p>
+      <p>© All rights reserved by HANDS UP. 2021</p>
   </footer>
 
 </body>
